Fix overflowing grid

--- a/styles.css
+++ b/styles.css
@@ -29,11 +29,12 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
     align-content: center;
-    border: 2px solid rgb(48, 48, 48);
+    border: 0.5vh solid rgb(48, 48, 48);
     border-radius: 8px;
     background-color: darkgray;
-    padding: 2vh;
+    padding: 2.5vh;
 }
 
 .square {
